src/test/ui/hr-subtype/hr-subtype.bound_co_a_b_vs_bound_co_a.stderr
error: compilation successful
  --> $DIR/hr-subtype.rs:96:1
   |
LL | / fn main() {
LL | | //[bound_a_vs_bound_a]~^ ERROR compilation successful
LL | | //[bound_a_vs_bound_b]~^^ ERROR compilation successful
LL | | //[bound_inv_a_vs_bound_inv_b]~^^^ ERROR compilation successful
...  |
LL | | //[bound_contra_a_contra_b_ret_co_a]~^^^^^^^^^ ERROR compilation successful
LL | | }
   | |_^

error: aborting due to previous error

